# git-credential-pykeyring

./: .gitignore  git_credential_pykeyring.py  setup.cfg
