[metadata]
name = git-credential-pykeyring
description = A git credential helper which sits on top of the Python keyring library
version = 0.1.0
author = Toby Harradine
author_email = me@tobyharradine.id.au
license = GPL-3.0


[options]
install_requires =
    keyring
py_modules =
    git_credential_pykeyring

[options.entry_points]
console_scripts =
    git-credential-pykeyring=git_credential_pykeyring:main
